--- a/midi_test/.cproject
+++ b/midi_test/.cproject
@@ -37,6 +37,7 @@
 							<tool id="cdt.managedbuild.tool.gnu.cross.c.linker.174123925" name="Cross GCC Linker" superClass="cdt.managedbuild.tool.gnu.cross.c.linker">
 								<option id="gnu.c.link.option.libs.657170188" name="Libraries (-l)" superClass="gnu.c.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="asound"/>
+									<listOptionValue builtIn="false" value="m"/>
 									<listOptionValue builtIn="false" value="pthread"/>
 								</option>
 								<option id="gnu.c.link.option.paths.1511787472" name="Library search path (-L)" superClass="gnu.c.link.option.paths" valueType="libPaths">
